--- a/app/src/main/res/layout/screen_camera.xml
+++ b/app/src/main/res/layout/screen_camera.xml
@@ -1,15 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.camera.view.PreviewView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/previewView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_weight="10"
-    android:background="@color/black"
-    android:orientation="vertical">
+    android:background="@color/black">
 
-    <androidx.camera.view.PreviewView
-        android:id="@+id/previewView"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="9" />
-
-</LinearLayout>
+</androidx.camera.view.PreviewView>
